--- a/vpc.yaml
+++ b/vpc.yaml
@@ -28,12 +28,6 @@ Parameters:
     AllowedPattern: "^(10|172|192)\\.\\d{1,3}\\.\\d{1,3}\\.\\d{1,3}\\/(16|17|18|19|20|21|22|23|24|25|26|27|28)$"
     ConstraintDescription: must be valid IPv4 CIDR block (/16 to /28) from the private address ranges defined in RFC 1918.
 
-  PublicAZCSubnetBlock:
-    Type: String
-    Description: Subnet CIDR for third Availability Zone
-    AllowedPattern: "^(10|172|192)\\.\\d{1,3}\\.\\d{1,3}\\.\\d{1,3}\\/(16|17|18|19|20|21|22|23|24|25|26|27|28)$"
-    ConstraintDescription: must be valid IPv4 CIDR block (/16 to /28) from the private address ranges defined in RFC 1918.
-
   # Private Subnets
   PrivateAZASubnetBlock:
     Type: String
@@ -44,12 +38,6 @@ Parameters:
   PrivateAZBSubnetBlock:
     Type: String
     Description: Subnet CIDR for second Availability Zone (e.g. us-west-2b, us-east-1c)
-    AllowedPattern: "^(10|172|192)\\.\\d{1,3}\\.\\d{1,3}\\.\\d{1,3}\\/(16|17|18|19|20|21|22|23|24|25|26|27|28)$"
-    ConstraintDescription: must be valid IPv4 CIDR block (/16 to /28) from the private address ranges defined in RFC 1918.
-
-  PrivateAZCSubnetBlock:
-    Type: String
-    Description: Subnet CIDR for third Availability Zone, (e.g. us-west-2c, us-east-1d)
     AllowedPattern: "^(10|172|192)\\.\\d{1,3}\\.\\d{1,3}\\.\\d{1,3}\\/(16|17|18|19|20|21|22|23|24|25|26|27|28)$"
     ConstraintDescription: must be valid IPv4 CIDR block (/16 to /28) from the private address ranges defined in RFC 1918.
 
@@ -169,28 +157,6 @@ Resources:
       SubnetId: !Ref PublicAZBSubnet
       RouteTableId: !Ref PublicRouteTable
 
-  # Third Availability Zone
-  PublicAZCSubnet:
-    Type: AWS::EC2::Subnet
-    Properties:
-      VpcId: !Ref Vpc
-      CidrBlock: !Ref PublicAZCSubnetBlock
-      AvailabilityZone: !Select [2, !GetAZs '']
-      MapPublicIpOnLaunch: true
-      Tags:
-        - Key: Name
-          Value: !Sub
-            - ${ProjectName}-public-${AZ}
-            - { AZ: !Select [2, !GetAZs ''] }
-        - Key: Type
-          Value: public
-
-  PublicAZCSubnetRouteTableAssociation:
-    Type: AWS::EC2::SubnetRouteTableAssociation
-    Properties:
-      SubnetId: !Ref PublicAZCSubnet
-      RouteTableId: !Ref PublicRouteTable
-
   # Private Subnets - NAT Gateways
   # First Availability Zone
   AZANatGatewayEIP:
@@ -219,21 +185,6 @@ Resources:
     Properties:
       AllocationId: !GetAtt AZBNatGatewayEIP.AllocationId
       SubnetId: !Ref PublicAZBSubnet
-
-  # Third Availability Zone
-  AZCNatGatewayEIP:
-    Type: AWS::EC2::EIP
-    Condition: HighlyAvailable
-    Properties:
-      Domain: vpc
-    DependsOn: VPCGatewayAttachment
-
-  AZCNatGateway:
-    Type: AWS::EC2::NatGateway
-    Condition: HighlyAvailable
-    Properties:
-      AllocationId: !GetAtt AZCNatGatewayEIP.AllocationId
-      SubnetId: !Ref PublicAZCSubnet
 
   # Private Subnets
   # First Availability Zone
@@ -333,63 +284,6 @@ Resources:
       SubnetId: !Ref PrivateAZBSubnet
       RouteTableId: !Ref PrivateAZBRouteTable
 
-  # Third Availability Zone
-  PrivateAZCSubnet:
-    Type: AWS::EC2::Subnet
-    Properties:
-      VpcId: !Ref Vpc
-      CidrBlock: !Ref PrivateAZCSubnetBlock
-      AvailabilityZone: !Select [2, !GetAZs '']
-      Tags:
-        - Key: Name
-          Value: !Sub
-            - ${ProjectName}-private-${AZ}
-            - { AZ: !Select [2, !GetAZs ''] }
-        - Key: Type
-          Value: private
-
-  PrivateAZCRouteTable:
-    Type: AWS::EC2::RouteTable
-    Properties:
-      VpcId: !Ref Vpc
-      Tags:
-        - Key: Name
-          Value: !Sub
-            - ${ProjectName}-private-${AZ}
-            - { AZ: !Select [2, !GetAZs ''] }
-        - Key: Type
-          Value: private
-
-  PrivateAZCRoute:
-    Type: AWS::EC2::Route
-    Condition: HighlyAvailable
-    Properties:
-      RouteTableId: !Ref PrivateAZCRouteTable
-      DestinationCidrBlock: 0.0.0.0/0
-      NatGatewayId: !Ref AZCNatGateway
-
-  PrivateAZCRouteTableAssociation:
-    Type: AWS::EC2::SubnetRouteTableAssociation
-    Condition: HighlyAvailable
-    Properties:
-      SubnetId: !Ref PrivateAZCSubnet
-      RouteTableId: !Ref PrivateAZCRouteTable
-
-  NotHighlyAvailablePrivateAZCRoute:
-    Type: AWS::EC2::Route
-    Condition: NotHighlyAvailable
-    Properties:
-      RouteTableId: !Ref PrivateAZCRouteTable
-      DestinationCidrBlock: 0.0.0.0/0
-      NatGatewayId: !Ref AZANatGateway
-
-  NotHighlyAvailablePrivateAZCRouteTableAssociation:
-    Type: AWS::EC2::SubnetRouteTableAssociation
-    Condition: NotHighlyAvailable
-    Properties:
-      SubnetId: !Ref PrivateAZCSubnet
-      RouteTableId: !Ref PrivateAZCRouteTable
-
   # --------------------------------------------- #
   # Log Group
   # --------------------------------------------- #
@@ -459,7 +353,7 @@ Resources:
         - CidrIp: 0.0.0.0/0
           FromPort: '0'
           ToPort: '65535'
-          IpProtocol: udp
+          IpProtocol: -1
       VpcId: !Ref Vpc
     Type: AWS::EC2::SecurityGroup
 
@@ -492,12 +386,6 @@ Outputs:
     Export:
       Name: !Sub '${ProjectName}-public-az-b-subnet'
 
-  PublicAZCSubnetId:
-    Description: Availability Zone C public subnet Id
-    Value: !Ref PublicAZCSubnet
-    Export:
-      Name: !Sub '${ProjectName}-public-az-c-subnet'
-
   PrivateAZASubnetId:
     Description: Availability Zone A private subnet Id
     Value: !Ref PrivateAZASubnet
@@ -510,12 +398,6 @@ Outputs:
     Export:
       Name: !Sub '${ProjectName}-private-az-b-subnet'
 
-  PrivateAZCSubnetId:
-    Description: Availability Zone C private subnet Id
-    Value: !Ref PrivateAZCSubnet
-    Export:
-      Name: !Sub '${ProjectName}-private-az-c-subnet'
-
   PrivateAZARouteTableId:
     Description: Route table for private subnets in AZ A
     Value: !Ref PrivateAZARouteTable
@@ -527,9 +409,3 @@ Outputs:
     Value: !Ref PrivateAZBRouteTable
     Export:
       Name: !Sub '${ProjectName}-private-az-b-rtb'
-
-  PrivateAZCRouteTableId:
-    Description: Route table for private subnets in AZ C
-    Value: !Ref PrivateAZCRouteTable
-    Export:
-      Name: !Sub '${ProjectName}-private-az-c-rtb'
