--- a/package.json
+++ b/package.json
@@ -20,5 +20,11 @@
     "aws-sdk": "^2.1047.0",
     "prettier": "^2.5.1",
     "yargs": "^17.3.0"
+  },
+  "dependencies": {
+    "@types/node": "^17.0.2",
+    "@types/yargs": "^17.0.7",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.5.4"
   }
 }
